--- a/regression-testing-rag/config.yaml
+++ b/regression-testing-rag/config.yaml
@@ -3,7 +3,11 @@ llm_models:
   gpt4o-mini:
     name: gpt-4o-mini
     temperature: 0.2
-  
+
+  gpt4o:
+    name: gpt-4o
+    temperature: 0.2
+
   gpt4:
     name: gpt-4
     temperature: 0.1
